# beanie

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  testing beanie.ipynb  tox.ini
beanie/: beanie.py  differential_expression.py  driver_genes.py  scoring_aucell.py  utils.py
data/: metadata_jerby-arnon.csv  signatures_jerby-arnon.csv
examples/: Example 1 - Melanoma Case Study.ipynb  readme.md
src/: beanie.py  driver_genes.py  genesig.py  scoring_aucell.py  utils.py
src/beanie/: __init__.py  beanie.py  differential_expression.py  driver_genes.py  utils.py
tests/: BeeSwarmPlot-Matrix.ipynb  BeeSwarmPlot.ipynb  GetSignaturesMsigDb.ipynb  PlotConfidenceDifferentialExpression.ipynb  SignatureScoringMean.ipynb  SignatureScoringVision.ipynb  SignatureScoringZNormalised.ipynb  UpsetPlotSignatureGenes.ipynb  data preparation.ipynb  driver_genes.ipynb
tutorials/: Preparing Input Files with Scanpy.ipynb
