[metadata]
# replace with your username:
name = beanie-sjohri20
version = 0.0.1
author = Shreya Johri
author_email = shreyajohri16@gmail.com
description = BEANIE is a tool for group biology estimation in single cell RNA-seq data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjohri20/beanie
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2.0
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src